# AIHelpMath

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  walkthrough.md.resolved
app/: main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: explanation.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: user.py
app/schemas/: explanation.py
app/services/: ai_tutor.py
