[project]
name = "aihelpmath"
version = "0.1.0"
description = "Backend impulsado por IA para educación personalizada"
authors = [
    { name = "Gabriel Arcila", email = "caraballogabriel1122@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0", # Gestión de configuración (.env)

    # Datos (ORM & DB)
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",          # Driver asíncrono para PostgreSQL

    # Inteligencia Artificial
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",  # O la integración que elijamos
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",   # Vital para probar FastAPI
    "httpx>=0.26.0",
    "typeguard>=4.4.4",
    "pydantic>=2.12.5",

    # Calidad de Código (Linter & Formatter)
    "ruff>=0.1.14",
]

[tool.uv]
package = false

# --- Configuraciones de Herramientas ---

[tool.ruff]
# Configuración del Linter para que sea estricto pero just
line-length = 88
select = ["E", "F", "W", "I"] # Errores, Pyflakes, Warning, Import Sort
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"